<resources>
    <!-- Basics -->
    <string name="app_name" translatable="false">BookMe</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="close" translatable="false">Close</string>

    <!-- Authentication -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="action_register" translatable="false">Register</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password can\'t be less than 8 characters</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="invalid_passConf">Passwords do not match</string>
    <string name="invalid_fname">First name can\'t be empty</string>
    <string name="invalid_lname">Last name can\'t be empty</string>
    <string name="register_error">Register Failed</string>
    <string name="phone">Phone Number</string>

    <!-- Screens -->
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_settings">Settings</string>
    <string name="restaurants">Restaurants</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="self_care">Self Care</string>
    <string name="clothing">Clothing</string>
    <string name="welcome">Welcome</string>
    <string name="shopping">Shopping made safer</string>
    <string name="get_started">Get Started</string>

    <!-- Reservations -->
    <string name="search">Search</string>
    <string name="no_reservations">You don\'t have any reservations!</string>
    <string name="cancel_res">Cancel reservation?</string>
    <string name="cancel_res_sure">Are you sure you want to cancel this reservation?</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="choose">Choose</string>

    <!-- Booking -->
    <string name="book">Book</string>
    <string name="description">Description</string>
    <string name="res_booked">Reservation Booked!</string>
    <string name="choose_slot">Choose a Slot</string>
    <string name="slot" translatable="false">Slot %s:&#160;&#160;&#160;%s&#160;-&#160;%s</string>
    <string name="slots_indicator" translatable="false">Slots:</string>
    <string name="time" translatable="false">%s&#160;-&#160;%s</string>


    <!-- Filter -->
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By:</string>
    <string name="available_at">Available at</string>

    <!-- Preferences -->
    <string name="general_header">General</string>
    <string name="account_header">Account</string>
    <string name="language">Language</string>

    <!-- Languages -->
    <string name="english" translatable="false">English</string>
    <string name="greek" translatable="false">Ελληνικά (Greek)</string>
    <string name="french" translatable="false">Français (French)</string>
    <string name="dutch" translatable="false">Nederlands (Dutch)</string>
    <string name="no_connection">No internet connection. Connect to the internet and try again.</string>
    <string name="refresh">Refresh</string>

</resources>
