<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.midyh.bookme.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_shopsFragment"
            app:destination="@id/shopsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.midyh.bookme.ui.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.midyh.bookme.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/shopsFragment"
        android:name="com.midyh.bookme.ui.shops.ShopsFragment"
        tools:layout="@layout/fragment_shops" >
        <argument
            android:name="category"
            app:argType="string" />
    </fragment>

    <!--    <fragment-->
<!--        android:id="@+id/navigation_login"-->
<!--        android:name="com.midyh.bookme.ui.authentication.login.LoginFragment"-->
<!--        android:label="@string/login"-->
<!--        tools:layout="@layout/fragment_login" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_register"-->
<!--        android:name="com.midyh.bookme.ui.authentication.register.RegisterFragment"-->
<!--        android:label="@string/register"-->
<!--        tools:layout="@layout/fragment_register"/>-->
</navigation>